tests/negative/typecheck/union-dup.orng
fn main() -> Int
    let x: (a | b) || (b | c) = .b
    0